--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -1,5 +1,5 @@
 .page-header {
-    background-color: #ff9400;
+    background-color: #a6d8af;
     margin-top: 0;
     padding: 20px 20px 20px 40px;
 }
@@ -15,7 +15,7 @@
 }
 
 h1, h2, h3, h4 {
-    font-family: 'Jura', sans-serif;
+    font-family: 'Bad Script', cursive;
 }
 
 .date {
