--- a/blog/templates/blog/post_detail.html
+++ b/blog/templates/blog/post_detail.html
@@ -6,6 +6,10 @@
             <div class="date">
                 {{ post.published_date }}
             </div>
+
+	{% else %}
+    		<a class="btn btn-default" href="{% url 'blog.views.post_publish' pk=post.pk %}">Publish</a>
+
         {% endif %}
 
       {% if user.is_authenticated %}
